--- a/controLab/frdmcontrolview.ui
+++ b/controLab/frdmcontrolview.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>238</width>
-    <height>187</height>
+    <width>247</width>
+    <height>251</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,6 +16,19 @@
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
     <layout class="QVBoxLayout" name="verticalLayout">
+     <item>
+      <spacer name="verticalSpacer_2">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
@@ -40,9 +53,16 @@
         </widget>
        </item>
        <item>
-        <widget class="QDoubleSpinBox" name="setPointSpinBox"/>
+        <widget class="QSpinBox" name="setPointSpinBox"/>
        </item>
       </layout>
+     </item>
+     <item>
+      <widget class="QSlider" name="setPointSlider">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
      </item>
      <item>
       <spacer name="verticalSpacer">
